# HeadFetch

./: CMakeLists.txt
src/: main.cpp
src/core/: Scanner.h  Types.h
src/game/: Offsets.h
src/skin/: SkinCropper.h  TextureCache.h
src/ui/: ImGuiLayer.h  TabList.h  font_data.h
